--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,16 @@ language: go
 sudo: false
 
 go:
-  - 1.x
-  - master
+  - 1.5
+  - tip
 
 install:
-  - go get golang.org/x/tools/go/packages
+  - go get golang.org/x/tools/go/loader
+  - go get golang.org/x/tools/go/types
+  - go get github.com/kisielk/gotool
+  - go get honnef.co/go/importer
+  - go get github.com/opennota/check
   - go build ./...
 
 script:
-  - test -z "$(gofmt -l . | tee /dev/stderr)"
-  - go test -v ./...
+  - go test -v
